# doctown-v6

./: .gitignore  BATCH_MODE_GUIDE.md  Cargo.toml  DOCSCORE_SYSTEM.md  LLM_BATCH_MODE.md  LLM_PER_SYMBOL_ARCHITECTURE.md  QUICK_START_BATCH_MODE.md  README.md  STATIC_ANALYSIS_ROADMAP.md  USE_OPTIMIZED_LLM.md  orchestrator.sh  patch_to_optimized.sh  test_pipeline.sh  test_pipeline_batch.sh
doctown/: .dockerignore  Dockerfile  README.md
doctown/python/: .env.example  .gitignore  EMBEDDING_MODELS.md  SETUP.md  activate.sh  requirements.txt  run_example.sh  setup_venv.sh
doctown/python/app/: __init__.py  binary_io.py  cli.py  doc_scorer.py  docpack_builder.py  embedder.py  main.py  pipeline.py  utils.py
doctown/python/app/ingestors/: __init__.py  base.py  code.py  generic.py  registry.py
doctown/python/app/llm/: OPTIMIZATION_GUIDE.md  __init__.py  benchmark_local.py  local_client.py  local_client_optimized.py  openai_client.py  prompts.py
doctown/python/config/: embedding_models.json
doctown/python/examples/: test_doc_scorer.py  test_embedder.py
doctown/python/scripts/: download_model.py  setup_embedding.sh
doctown/rust/: Cargo.toml
doctown/rust/src/: main.rs  parser.rs
reports/: 2025-11-25-PIPELINE_TEST_RESULTS.md
